# morale-skills

./: .gitignore  Cargo.toml  DOCUMENTATION_INDEX.md  EVALUATION_AND_TUNING.md  PAPER_KNOWLEDGE_BASE.md  README.md  RESEARCH_PAPER_OUTLINE.md  TECHNICAL_IMPLEMENTATION.md  TUNING_METHODOLOGY.md  TUNING_RESULTS.md  achitecture.txt  agent_benchmark_runner.py  analyze_tuning_results.py  benchmark_results_report.json  compare_samples.py  hybrid_orchestrator.py  run_morale.bat  run_morale.sh  setup_ollama.sh
data/skills/: README.md
docs/: DATA_FLOWS.md  DECISIONS.md
morale-rust/: build.rs  config.toml
morale-rust/data/: README.md
morale-rust/src/: config.rs  lib.rs  main.rs  risk_checkers.rs
morale-rust/tests/: integration_test.rs
pgdrsa-python/: pyproject.toml
pgdrsa-python/pgdrsa/: Dockerfile  README.md  agent.py  analyze.py  barrier.py  canary.py  config.py  container_runner.py  fixtures.py  forwarder.py  judge.py  pipeline.py  receiver.py  run_all.py  runner.py  skills.py  smoke.py  tools.py  trace.py
pgdrsa-python/pgdrsa/shims/: git  gog  pbpaste  ping  sw_vers  sysctl
pgdrsa-python/pgdrsa/tests/: test_agent_fakellm.py  test_barrier.py  test_canary.py  test_fixtures.py  test_judge.py  test_pipeline_local_e2e.py  test_receiver.py  test_runner_local.py  test_skills.py  test_tools.py  test_tools_message.py  test_trace.py
pgdrsa-python/scripts/: pgdrsa_random_results.jsonl  run_random_benchmark.py
src/: database.rs  lib.rs  main.rs  models.rs  risk_checkers.rs
src/database/: connection.rs  queries.rs  schema.rs  utils.rs
tests/: integration_test.rs
(+2705 files in other folders)
