[package]
name = "morale"
version = "0.1.0"
edition = "2021"

[lib]
name = "morale"
path = "src/lib.rs"

[dependencies]
surrealdb = { version = "1.0", features = ["kv-mem", "rustls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "morale"
path = "src/main.rs"