[project]
name = "pgdrsa"
version = "0.1.0"
requires-python = ">=3.10"
# LLM access is OpenAI-compatible (any endpoint supporting /v1/chat/completions with tools):
# configure via .env (see .env.example). Anthropic SDK intentionally not used.
dependencies = ["pydantic==2.9.2", "openai==1.51.0", "python-dotenv==1.0.1"]

[project.optional-dependencies]
dev = ["pytest==8.3.3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pgdrsa*"]